# Pong

./: .gitignore  CMakeLists.txt  GameController.cpp  GameController.h  GameState.h  GameView.cpp  GameView.h  README.md  build.bat  main.cpp  vcpkg.json
SDL2-2.26.4/i686-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
SDL2-2.26.4/test/: CMakeLists.txt
SDL2-2.26.4/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
assets/: pongicon.rc
assets/image/: pong.rc
src/: GameController.cpp  GameController.h  GameState.h  GameView.cpp  GameView.h  font.cpp  font.h  main.cpp
